--- a/JS_site/site.html
+++ b/JS_site/site.html
@@ -54,6 +54,17 @@
 
     <main>
         <div id="feed-container">
+
+<!--FORMULAIRE DYNAMIQUE-->
+            <form id="dynamicForm">
+                <label for="avis">Laissez un avis :</label>
+                <input id="avis" type="text" value="" />
+                <button type="button" onclick="getInputValue()">Envoyer</button>
+            </form>
+            <div id="output"></div>
+            <div id="posts"></div>
+<!--FIN FORMULAIRE DYNAMIQUE-->
+
             <div id="container">
 <!--                <div class="trip">-->
 <!--                    <div class="photo_trip">-->
